# mzbmw

./: README.md
backend/: .dockerignore  .gitignore  README.md  pyproject.toml  render-build.sh  render.yaml
backend/src/backend/: main.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: DatasheetDownloader.tsx
frontend/src/lib/: api.ts  db.ts
